--- a/FlaskApp/app/templates/layout.html
+++ b/FlaskApp/app/templates/layout.html
@@ -34,7 +34,7 @@
             </div>
         
             <a id="logo-header" href="../layout.html">
-                <span class="site-name">MT Analizer</span>
+                <span class="site-name">MT Analyzer</span>
                 <span class="site-desc">Análisis de tráfico de red</span>
             </a> <!-- / #logo-header -->
         
